style: styler pass

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -15,5 +15,6 @@ importFrom(igraph,"V")
 importFrom(igraph,"V<-")
 importFrom(igraph,"degree")
 importFrom(mapsf,mf_get_links)
+importFrom(mapsf,mf_legend)
 importFrom(mapsf,mf_map)
 importFrom(utils,stack)
